--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "swiper": "^6.7.0",
     "vue": "^2.6.11",
+    "vue-imask": "^6.0.7",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
